sass/style.scss
html, body {
  height: 100%;
  width: 100%;
  margin: 0;
  padding: 0;
}

body {
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: center;

  color: #fff;

  font-size: 1.2rem;
  font-family: monospace;

  a {
    &, &:visited {
      color: #fff;
    }

    &:hover {
      color: #aaa;
    }
  }

  #fps {
    top: 0;
    left: 0;
    position: fixed;

    margin: 1rem;

    font-size: 1rem;
    font-family: monospace !important;
  }
}

